Source/WebCore/html/parser/HTMLDocumentParser.cpp
@@ -197,15 +197,8 @@ void HTMLDocumentParser::runScriptsForPausedTreeBuilder()
 
         // https://html.spec.whatwg.org/#create-an-element-for-the-token
         auto& elementInterface = constructionData->elementInterface.get();
-        RefPtr<Element> newElement = elementInterface.constructElement(constructionData->name, JSCustomElementInterface::ShouldClearException::Clear);
-        if (!newElement) {
-            ASSERT(!m_treeBuilder->isParsingTemplateContents());
-            newElement = HTMLUnknownElement::create(QualifiedName(nullAtom, constructionData->name, xhtmlNamespaceURI), *document());
-            newElement->setIsCustomElementUpgradeCandidate();
-            newElement->setIsFailedCustomElement(elementInterface);
-        }
-
-        m_treeBuilder->didCreateCustomOrCallbackElement(newElement.releaseNonNull(), *constructionData);
+        auto newElement = elementInterface.constructElementWithFallback(*document(), constructionData->name);
+        m_treeBuilder->didCreateCustomOrCallbackElement(WTFMove(newElement), *constructionData);
         return;
     }
 #endif
